Header bar items not centred to the page fixes #12

--- a/parser_html/static/custom_btn.css
+++ b/parser_html/static/custom_btn.css
@@ -10,3 +10,10 @@ width:90px;
 border-radius:3px;
 box-shadow: 1px 1px 2px grey;
 }
+
+#btn-update {
+    width: 120px;
+    background-color:#3daee9;
+    border-radius:3px;
+    box-shadow: 1px 1px 2px grey;
+}
